--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,12 +4,12 @@
   --font-display: "Satoshi-Variable"; 
 }
 
-@font-face {
+/* @font-face {
   font-family: Satoshi-Variable;
   src: url('../../public/fonts/Satoshi-VariableItalic.woff2') format('woff2');
   font-weight: 300 900;
   font-display: swap;
   font-style: normal;
-}
+} */
 
 
