menambahkan toaster download success

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
-@theme {
+/* @theme {
   --font-display: "Satoshi-Variable"; 
-}
+} */
 
 /* @font-face {
   font-family: Satoshi-Variable;
